Voxel data texture disappears when camera follows path #47303

Closed
opened 2016-02-02 23:49:12 +01:00 by Thomas · 7 comments

System Information
OS: Linux 64bit
GPU: NVIDIA GTX 970

Blender Version
blender-2.76b-linux-glibc211-x86_64

Short description
When I use an 8 bit raw voxel data texture for the standard cube and let the camera follow a path, the texture appears only when frame 1 is selected. For any other frame, the texture preview is black and rendering yields nothing:buggy_with_voxel_data.blend

Exact steps

  1. Create a new scene
  2. Select cube and add texture of type "Voxel Data", choose File Format "8 bit Raw", select engine.raw dataset, which
 can be obtained from http://www.tc18.org/code_data_set/3D_greyscale/engine.raw.gz, set resolution to "256x256x128"
  1. Set Influence Volume to Density=1, Emission=1
  2. Select Material to Volume, set Density=0
  3. Add Curve Path to scene
  4. Select Camera and Path; Ctrl-P -> follow path

As long as frame 1 is selected, the texture is okay. But if you select any other frame, the texture is black and nothing will be renderedd.

**System Information** OS: Linux 64bit GPU: NVIDIA GTX 970 **Blender Version** blender-2.76b-linux-glibc211-x86_64 **Short description** When I use an 8 bit raw voxel data texture for the standard cube and let the camera follow a path, the texture appears only when frame 1 is selected. For any other frame, the texture preview is black and rendering yields nothing:[buggy_with_voxel_data.blend](https://archive.blender.org/developer/F279659/buggy_with_voxel_data.blend) **Exact steps** 1. Create a new scene 2. Select cube and add texture of type "Voxel Data", choose File Format "8 bit Raw", select engine.raw dataset, which ``` can be obtained from http://www.tc18.org/code_data_set/3D_greyscale/engine.raw.gz, set resolution to "256x256x128" ``` 3. Set Influence Volume to Density=1, Emission=1 4. Select Material to Volume, set Density=0 5. Add Curve Path to scene 6. Select Camera and Path; Ctrl-P -> follow path As long as frame 1 is selected, the texture is okay. But if you select any other frame, the texture is black and nothing will be renderedd.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tauzero7

Added subscriber: @tauzero7

This issue was referenced by 94d1674ddc

This issue was referenced by 94d1674ddcce3356489c79e58473450d015c8a59

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that by default voxels are animated, in this example enable Still Frame Only,

However there was a bug with cache invalidation, fixed in master.

Note that by default voxels are animated, in this example enable **Still Frame Only**, However there was a bug with cache invalidation, fixed in master.
Author

Thank you very much for your quick response. I am absolutely new to blender and I overlooked the "Still frame number" setting.

Thank you very much for your quick response. I am absolutely new to blender and I overlooked the "Still frame number" setting.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47303
No description provided.