Fix T47303: Voxel texture disappears after first frame

Failed reads didn't update the voxel 'ok' tag,
making successive reads fail (even on existing frames).